objects/GDT_Services__c.object
<CustomObject>
    <fields>
        <fullName>BMCImpact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup on the BMC package of object Impact, to calculate the priority</description>
        <label>BMC Impact</label>
        <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
        <relationshipLabel>GDT Services Admin</relationshipLabel>
        <relationshipName>GDT_Services_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup on the BMC package of object Urgency to calculate the Priority</description>
        <label>BMC Urgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>GDT Services Admin</relationshipLabel>
        <relationshipName>GDT_Services_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_benefits__c</fullName>
        <label>Client benefits</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>ex : SFDC–S01 for the service new Sandbox</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <description>Counter of services by year</description>
        <label>Service Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclusion__c</fullName>
        <label>Exclusion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager of the service</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDT_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <label>Prerequisites</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_commentary__c</fullName>
        <label>Price commentary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReportGroup__c</fullName>
        <label>Report Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox Management</fullName>
                </value>
                <value>
                    <fullName>Request of release</fullName>
                </value>
                <value>
                    <fullName>User Management &amp; Appexchange install</fullName>
                </value>
                <value>
                    <fullName>Others (Data load, Technical, ...)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Levels_commitments__c</fullName>
        <label>Service Levels &amp; commitments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_access__c</fullName>
        <label>Service access</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_Activity__c</fullName>
        <label>Type Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preproduction Release</fullName>
                </value>
                <value>
                    <fullName>Production Release</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Developer Pro (Configuration)</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GDT Services</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Counter__c</columns>
        <columns>Code__c</columns>
        <columns>Label__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>GDT_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>GDT Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDT Services Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>